--- a/index.ipynb
+++ b/index.ipynb
@@ -936,29 +936,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 72 entries, 0 to 71\n",
-      "Data columns (total 2 columns):\n",
-      "Month             72 non-null object\n",
-      "monthly_return    72 non-null float64\n",
-      "dtypes: float64(1), object(1)\n",
-      "memory usage: 1.2+ KB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>monthly_return</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Month</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1961-01-01</th>\n",
+       "      <td>0.082</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961-02-01</th>\n",
+       "      <td>0.059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961-03-01</th>\n",
+       "      <td>0.050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961-04-01</th>\n",
+       "      <td>0.008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1961-05-01</th>\n",
+       "      <td>0.042</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            monthly_return\n",
+       "Month                     \n",
+       "1961-01-01           0.082\n",
+       "1961-02-01           0.059\n",
+       "1961-03-01           0.050\n",
+       "1961-04-01           0.008\n",
+       "1961-05-01           0.042"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "stonks = pd.read_csv('NYSE_monthly.csv')\n",
     "\n",
-    "pd.to_datetime(stonks['Month'], inplace=True)\n",
+    "stonks['Month'] = pd.to_datetime(stonks['Month'])\n",
     "stonks.set_index(['Month'], inplace=True)\n",
-    "stonks.inf"
+    "stonks.head()"
    ]
   },
   {
